--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -30,7 +30,7 @@
     font-size: 1rem;
     font-weight: bold;
     color: white;
-    background-color: #40005d;
+    background-color: rgb(151, 30, 50);
     border: 1px solid white;
     padding: 0.5rem;
     border-radius: 12px;
